# PaperPilot

./: LICENSE  Makefile  README.md  paperpilot.spec  pyproject.toml  ruff.toml
.github/: FUNDING.yml  test.txt
.github/mydir/: test.yml
ci-config/: build.yml  ci.yml
foo/bar/: test.txt
migrations/: 001_init.sql
paperpilot/: __init__.py  app.py
paperpilot/assets/templates/: extraction_template_meta.json  meta_runner.R  protocol_default.json  reasons_taxonomy.yaml  sample_meta_binary.csv  sample_meta_continuous.csv
paperpilot/core/: db.py  migrations.py  models.py  project.py  repositories.py
paperpilot/core/ai/: __init__.py  base.py  extractor.py  ollama_provider.py  openai_provider.py  provider_config.py  standardizer.py
paperpilot/core/ai/prompts/: audit.py  extraction.py  standardize.py
paperpilot/core/ai/providers/: __init__.py
paperpilot/core/dedup/: __init__.py  matching.py  normalize.py
paperpilot/core/exporters/: __init__.py  excel.py  ris.py
paperpilot/core/importers/: __init__.py  csv.py  ris.py
paperpilot/core/meta/: __init__.py  data_prep.py  runner.py
paperpilot/core/pdf/: extractor.py  manager.py
paperpilot/core/screening/: __init__.py  protocol.py  rules_engine.py  scorer.py
paperpilot/ui/: main_window.py
paperpilot/ui/pages/: dedup_page.py  export_page.py  extraction_page.py  import_page.py  meta_page.py  pdf_manager_page.py  screening_page.py  settings_page.py  standardize_page.py
paperpilot/ui/widgets/: record_table.py
tests/: test_ai_providers.py  test_csv_importer.py  test_dedup.py  test_e2e.py  test_meta.py  test_phase1.py  test_ris_importer.py  test_screening.py  test_standardizer.py  test_templates.py
