[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paperpilot"
version = "0.2.0"
description = "Desktop systematic review tool with AI-assisted extraction"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "PaperPilot Contributors"}]
keywords = ["systematic-review", "meta-analysis", "literature", "pyside6"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "PySide6>=6.6",
    "pydantic>=2.0",
    "httpx>=0.25",
    "rapidfuzz>=3.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
pdf = ["pdfplumber>=0.10"]
excel = ["openpyxl>=3.1"]
all = ["pdfplumber>=0.10", "openpyxl>=3.1"]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "pdfplumber>=0.10",
    "openpyxl>=3.1",
]

[project.scripts]
paperpilot = "paperpilot.app:main"

[tool.hatch.build.targets.wheel]
packages = ["paperpilot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "E402", "F401", "F811"]
